--- a/functionCreator/Makefile
+++ b/functionCreator/Makefile
@@ -2,7 +2,7 @@
 
 objs = FunctionCreator.o NormalCreator.o
 libs = ./dependencies/libgeom/build-dir/libgeom.a ./dependencies/dualcontouring/dual-contouring/builddir/libdualcontour.a 
-
+CXXFLAGS=-g
 
 prg: $(objs)
-	g++ -o prg $(objs) $(libs)
+	g++ -g -o prg $(objs) $(libs)
